# Ai_Translation_Chrome_Extension

./: README.md  app.py  main.py  pyproject.toml  translation.py
backend/: app.py  requirements.txt  translation.py
extension/: background.js  content.js  manifest.json
extension/popup/: popup.html  popup.js
