[project]
name = "ai-translate-chrome-extension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "langchain>=0.3.24",
    "langchain-groq>=0.3.2",
    "python-dotenv>=1.1.0",
]
